added homePage frontend

--- a/FitnessCenter/WebContent/index.html
+++ b/FitnessCenter/WebContent/index.html
@@ -1,11 +1,67 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title></title>
-</head>
-<body>
+  <meta charset="utf-8"/>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+   <link rel="stylesheet" href="css/homePage.css" />
+   <!--
+   <link rel="stylesheet" href="css/login.css" />
+   <link rel="stylesheet" href="css/restaurantPage.css" />
+   <link rel="stylesheet" href="css/administratorPage.css" />
+   <link rel="stylesheet" href="css/addNewRestaurant.css" />
+   <link rel="stylesheet" href="css/userProfile.css" />
+   <link rel="stylesheet" href="css/userProfilesOverview.css" />
+   <link rel="stylesheet" href="css/comments.css" />
+   <link rel="stylesheet" href="css/managerPage.css" />
+   <link rel="stylesheet" href="css/shoppingCart.css" />
+   <link rel="stylesheet" href="css/orders.css" />
+   <link rel="stylesheet" href="js/v6.5.0-dist/ol.css" type="text/css"/>
+   -->
+</head> 
+
+<body style="height:100%; width:100%;">
+<div id="fitpass">
+	  <router-view></router-view>
+</div>
+
+<script src="js/vue.js"></script>
+<script src="js/vue-router.js"></script>
+<script src="js/axios.js"></script>
+<script src="js/jquery.min.js"></script>
+<script src="js/moment.min.js"></script>
+<script src="js/v6.5.0-dist/ol.js"></script>
+<!--
+<script src="app/restaurantComments.js"></script>
+<script src="app/ordersManager.js"></script>
+<script src="app/delivererOrders.js"></script>
+<script src="app/delivererProfile.js"></script>
+<script src="app/delivererPage.js"></script>
+<script src="app/ordersCustomer.js"></script>
+<script src="app/shoppingCart.js"></script>
+<script src="app/customerRestaurant.js"></script>
+<script src="app/commentsCustomer.js"></script>
+<script src="app/customerProfile.js"></script>
+<script src="app/customerPage.js"></script>
+<script src="app/customersManager.js"></script>
+<script src="app/commentsManager.js"></script>
+<script src="app/restaurantPageManager.js"></script>
+<script src="app/managerProfile.js"></script>
+<script src="app/managerPage.js"></script>
+<script src="app/commentsAdmin.js"></script>
+<script src="app/userProfilesOverview.js"></script>
+<script src="app/adminRestaurant.js"></script>
+<script src="app/adminProfile.js"></script>
+<script src="app/addNewRestaurant.js"></script>
+<script src="app/administratorPage.js"></script>
+<script src="app/restaurantPage.js"></script>
+<script src="app/login.js"></script>
+-->
+<script src="app/homePage.js"></script>
+<script src="app/app.js"></script>
+
 
 </body>
 </html>
